[upd]: se desabilita regla eslint y se agrega historyApiFallback: true para las rutas en dev

--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
   ],
   "rules": {
     "react/jsx-filename-extension": 0,
+    "react/jsx-one-expression-per-line": "off",
     "array-bracket-spacing": 2,
     "arrow-body-style": 0,
     "block-scoped-var": 2,
