--- a/.eslintrc
+++ b/.eslintrc
@@ -44,7 +44,7 @@
     "default-case": 0,
     "dot-location": [2, "property"],
     "dot-notation": 0,
-    "eol-last": ["error", "never"],
+    "eol-last": 2,
     "eqeqeq": [2, "allow-null"],
     "func-names": 0,
     "func-style": 0,
